force-app/main/default/objects/Course_Participation_Data__c/Course_Participation_Data__c.object-meta.xml
<CustomObject>
    <label>Course Participation Data</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Course Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Participation Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>