force-app/main/default/objects/Course_Participation_Data__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course Name</label>
    <referenceTo>Course_Activity_Profile_Data__c</referenceTo>
    <relationshipLabel>Course Participation Data</relationshipLabel>
    <relationshipName>Course_Participation_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>