force-app/main/default/objects/Course_Participation_Data__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Course__r.End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>