force-app/main/default/objects/Course_Participation_Data__c/fields/Female_Participation__c.field-meta.xml
<CustomField>
    <fullName>Female_Participation__c</fullName>
    <label>Female Participation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>