force-app/main/default/objects/Course_Participation_Data__c/fields/Gender_Diverse_Participation__c.field-meta.xml
<CustomField>
    <fullName>Gender_Diverse_Participation__c</fullName>
    <label>Gender Diverse Participation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>