force-app/main/default/objects/Course_Participation_Data__c/fields/Number_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Number_Delivered__c</fullName>
    <label>Number Delivered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>