force-app/main/default/objects/Course_Participation_Data__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Course__r.Organization__r.Name</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>